push the prooject

--- a/backend/myquizz/templates/game/quiz_completed.html
+++ b/backend/myquizz/templates/game/quiz_completed.html
@@ -112,7 +112,7 @@
     <!-- Completed Container -->
     <div class="completed-container animate__animated animate__fadeIn">
         <h1>Congratulations!</h1>
-        <p>Your final score is: {{ gamesession.score }}</p>
+        <p>Your final score is: {{ gamesession.score }} on 500</p>
         <a href="{% url 'profile' user_id=request.user.id%}" class="home-btn">Return to Home</a>
     </div>
 
