add Top Ranking page That display the Top 3 score in the Game

--- a/backend/myquizz/templates/game/profile.html
+++ b/backend/myquizz/templates/game/profile.html
@@ -194,7 +194,7 @@
                 <div class="rectangle-button animate__animated animate__fadeInUp" onclick=location.href="{% url 'select_category' user_id=request.user.id %}">
                     <h4>Start Game</h4>
                 </div>
-                <div class="rectangle-button animate__animated animate__fadeInUp">
+                <div class="rectangle-button animate__animated animate__fadeInUp" onclick=location.href="{% url 'top_ranking'%}">
                     <h4>Top Ranking</h4>
                 </div>
                 <div class="rectangle-button animate__animated animate__fadeInUp">
